testdata/bad/go/type-error/go.mod
module example.com/tastefixture

go 1.22
